--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       position: relative;
       width: 80vw;
       aspect-ratio: 16 / 9;
-      background: url("abcde.PNG") center/cover no-repeat;
+      background: url("abcde2.PNG") center/cover no-repeat;
       background-color: #fff;
       overflow: hidden;
     }
