--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <div id="word-counter">0 / 20</div>
     <div id="start-screen"><button id="start-button">Game Start!</button></div>
     <button id="restart-btn">Restart!</button>
-    <div id="timer">$1 sec</div>
+    <div id="timer">0.00초</div>
     <div id="input-area">
       <input type="text" id="word-input" placeholder="단어를 입력하세요" autofocus />
     </div>
