--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
     const baseWords = [
   "원사업자 의무준수", "하도급대금 연동제", "60일내 하도급대금 지급", "기술자료요구서 제공",
   "상품정보제공공시", "그린워싱", "경제적 이해관계 표시", "하도급법 준수",
-  "다크패턴", "부당특약 설정 금지", "청약철회기간 7일", "인테그리티",
-  "부당 표시광고 근절", "청탁금지법 준수", "Integrity", "추천보증심사지침",
-  "구입강제 행위의 금지", "지식재산권", "하도급법", "공정위 제재"
+  "다크패턴", "부당특약 설정 금지", "철약철회기간 7일",
+  "부당한 표시광고 근절", "청탁금지법 준수", "Integrity", "추천보증심사지침",
+  "구입 강제행위 금지", "AI시대 지식재산권", "계약 날인전 법무검토 완료", "COMPLIANCE"
 ];
     const shuffledWords = baseWords.sort(() => 0.5 - Math.random()).slice(0, 25);
 
