--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
   </div>  <script>
     const baseWords = [
   "원사업자 의무준수", "하도급대금 연동제", "60일내 하도급대금 지급", "기술자료요구서 제공",
-  "상품정보제공공시", "그린워싱", "경제적 이해관계 표시", "하도급법 준수",
-  "다크패턴", "부당특약 설정 금지", "철약철회기간 7일",
+  "상품정보제공고시", "그린워싱", "경제적 이해관계 표시", "하도급법 준수",
+  "다크패턴", "부당특약 설정 금지", "청약철회기간 7일",
   "부당한 표시광고 근절", "청탁금지법 준수", "Integrity", "추천보증심사지침",
-  "구입 강제행위 금지", "AI시대 지식재산권", "계약 날인전 법무검토 완료", "COMPLIANCE"
+  "구입 강제행위 금지", "AI시대 지식재산권", "계약 날인전 법무검토 완료", "컴플라이언스" "임직원간 상호존중"
 ];
     const shuffledWords = baseWords.sort(() => 0.5 - Math.random()).slice(0, 25);
 
