--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>패션 컴플라이언스 이벤트</title>
+  <title>패션 컴플라이언스 이벤트 :)</title>
   <link href="https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSans.css" rel="stylesheet" />
   <style>
     * { box-sizing: border-box; }
