--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
           updateCounter();
           if (typedCount === totalWords) {
             const time = ((Date.now() - startTime) / 1000).toFixed(2);
-            endGame(`Game Completed! Time: ${time} sec`, true);
+            endGame(`게임 완료! 기록: ${time}초`, true);
           }
           break;
         }
